corrections in markup
Add horizontal scroll of forecast block

correct the same height of card-header

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
     text-transform: capitalize;
     
 }
+
+#forecast{
+    overflow-x:scroll;
+}
+
+#celsius-fahrenheit{
+    
+}
